RESOLVED FIXED Bug 83501
[Gtk] atk_text_set_caret_offset() fails for table cells
https://bugs.webkit.org/show_bug.cgi?id=83501
Summary [Gtk] atk_text_set_caret_offset() fails for table cells
Joanmarie Diggs
Reported 2012-04-09 13:16:34 PDT
Created attachment 136289 [details] test script Steps to reproduce: 1. Launch the test script 2. View the test case in Epiphany When the Epiphany window is activated the following output is seen: Headings found: 2 Able to set caret in [heading | item 1]: True Able to set caret in [heading | item 2]: True Paragraphs found: 2 Able to set caret in [paragraph | ]: True Able to set caret in [paragraph | ]: True Cells found: 2 Able to set caret in [table cell | ]: False Able to set caret in [table cell | ]: False List items found: 2 Able to set caret in [list item | ]: True Able to set caret in [list item | ]: True For some reason we cannot set the caret in table cells. As a result, Orca's structural navigation to and within tables fails.
Attachments
test script (1.26 KB, text/plain)
2012-04-09 13:16 PDT, Joanmarie Diggs
no flags
test case (237 bytes, text/html)
2012-04-09 13:17 PDT, Joanmarie Diggs
no flags
proposed patch with updated unit test (5.55 KB, patch)
2012-08-15 11:36 PDT, Joanmarie Diggs
no flags
Joanmarie Diggs
Comment 1 2012-04-09 13:17:11 PDT
Created attachment 136290 [details] test case
Joanmarie Diggs
Comment 2 2012-08-15 11:36:03 PDT
Created attachment 158605 [details] proposed patch with updated unit test
Joanmarie Diggs
Comment 3 2012-08-15 11:59:52 PDT
Chris, another one-liner fix with updated unit tests. And hopefully clear comments this time. ;) Thanks in advance!
chris fleizach
Comment 4 2012-08-15 12:01:19 PDT
Comment on attachment 158605 [details] proposed patch with updated unit test r=me
WebKit Review Bot
Comment 5 2012-08-15 12:18:43 PDT
Comment on attachment 158605 [details] proposed patch with updated unit test Clearing flags on attachment: 158605 Committed r125692: <http://trac.webkit.org/changeset/125692>
WebKit Review Bot
Comment 6 2012-08-15 12:18:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.