[Gtk] atk_text_set_caret_offset() fails for table cells https://bugs.webkit.org/show_bug.cgi?id=83501

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-08-15
Reviewed by Chris Fleizach.

Source/WebCore:

Allow using text ranges in accessible table cells.

* accessibility/gtk/AccessibilityObjectAtk.cpp:
(WebCore::AccessibilityObject::allowsTextRanges):
Add table cells to the list of accessibility objects supporting text ranges.

Source/WebKit/gtk:

Update unit test to include setting the caret in a table cell via the AtkText interface.

* tests/testatk.c:
(testWebkitAtkCaretOffsets): Add setting the caret inside the text of a table cell.

Canonical link: https://commits.webkit.org/111951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125692 268f45cc-cd09-0410-ab3c-d52691b4dbfc